--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:label="@string/app_name" >
         <activity
             android:name=".DataCollectorActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
